把音樂改成會循環播放

--- a/music.html
+++ b/music.html
@@ -1,3 +1,5 @@
 <body>
-<embed src="music\background.mp3" height="0" width="0" loop="true" ></embed>
+<audio src="music\background.mp3" autoplay loop>  
+</audio>
+
 </body>
